--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@ body,
   border: 1px solid #ffffff;
   width: 610px;
   height: 610px;
+
+  margin-top: 14px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
